--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "sprity-sass",
-  "version": "1.0.4",
+  "name": "sprity-fear",
+  "version": "1.0.0",
   "description": "scss/sass style processor for sprity",
   "repository": {
     "type": "git",
